--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ footer {
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
+  box-shadow: 0 1px 5px 5px rgb(255, 5, 5) ;
   opacity: 0.5;
 }
 
